Fix overflow issue. Fix footer newsletter link

--- a/curling-main/sass/base/_base.scss
+++ b/curling-main/sass/base/_base.scss
@@ -6,13 +6,10 @@ html {
 html,
 body {
     max-width: 100%;
-    overflow-x: hidden;
+    overflow-x: visible;
+    overflow-y: hidden;
     color: $black;
     font-family: $knockout;
-}
-
-body {
-  overflow: visible;
 }
 
 *,
